--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ solana-net-utils = "1.15.2"
 solana-pubsub-client = "1.15.2"
 solana-streamer = "1.15.2"
 solana-ledger = "1.15.2"
+solana-account-decoder = "1.15.2"
+solana-vote-program = "1.15.2"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 tokio = { version = "1.27.0", features = ["full", "fs"]}
@@ -62,6 +64,8 @@ solana-net-utils = { workspace = true }
 solana-pubsub-client = { workspace = true }
 solana-streamer = { workspace = true }
 solana-ledger = { workspace = true }
+solana-account-decoder = { workspace = true }
+solana-vote-program = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
