--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ solana-streamer = "1.15.2"
 solana-ledger = { version = "1.15.2", path = "../solana/ledger" }
 solana-account-decoder = "1.15.2"
 solana-vote-program = "1.15.2"
+solana-entry = "1.15.2"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 tokio = { version = "1.27.0", features = ["full", "fs"]}
@@ -34,6 +35,7 @@ futures = "0.3.28"
 bytes = "1.4.0"
 anyhow = "1.0.70"
 log = "0.4.17"
+env_logger = "0.10.0"
 clap = { version = "4.2.4", features = ["derive"] }
 dashmap = "5.4.0"
 const_env = "0.1.2"
@@ -67,6 +69,7 @@ solana-streamer = { workspace = true }
 solana-ledger = { workspace = true }
 solana-account-decoder = { workspace = true }
 solana-vote-program = { workspace = true }
+solana-entry = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
@@ -78,6 +81,7 @@ futures = { workspace = true }
 bytes = { workspace = true }
 anyhow = { workspace = true }
 log = { workspace = true }
+env_logger = "0.10.0"
 clap = { workspace = true }
 dashmap = { workspace = true }
 const_env = { workspace = true }
