--- a/quic-forward-proxy/Cargo.toml
+++ b/quic-forward-proxy/Cargo.toml
@@ -12,7 +12,7 @@ publish = false
 [dependencies]
 solana-sdk = { workspace = true }
 solana-streamer = { workspace = true }
-rustls = { workspace = true }
+rustls = { workspace = true, features = ["dangerous_configuration"]}
 serde = { workspace = true }
 serde_json = { workspace = true }
 bincode = { workspace = true }
@@ -36,4 +36,4 @@ solana-lite-rpc-services = { workspace = true }
 async-trait = { workspace = true }
 chrono = { workspace = true }
 tokio = { version = "1.28.2", features = ["full", "fs"]}
-
+rcgen = "0.9.3"
