--- a/quic-forward-proxy/Cargo.toml
+++ b/quic-forward-proxy/Cargo.toml
@@ -14,6 +14,7 @@ solana-sdk = { workspace = true }
 solana-streamer = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-net-utils = { workspace = true }
+solana-rpc-client = { workspace = true }
 rustls = { workspace = true, features = ["dangerous_configuration"]}
 serde = { workspace = true }
 serde_json = { workspace = true }
