--- a/lite-rpc/Cargo.toml
+++ b/lite-rpc/Cargo.toml
@@ -49,3 +49,5 @@ solana-lite-rpc-history = { workspace = true }
 
 [dev-dependencies]
 bench = { path = "../bench" }
+fxhash = "0.2.1"
+csv = "1.3.0"
