--- a/lite-rpc/Cargo.toml
+++ b/lite-rpc/Cargo.toml
@@ -46,9 +46,10 @@ solana-lite-rpc-core = { workspace = true }
 solana-lite-rpc-services = { workspace = true }
 solana-lite-rpc-cluster-endpoints = { workspace = true }
 solana-lite-rpc-history = { workspace = true }
-
-[dev-dependencies]
-bench = { path = "../bench" }
 fxhash = "0.2.1"
 csv = "1.3.0"
 countmap = "0.2.0"
+itertools = "0.12.0"
+
+[dev-dependencies]
+bench = { path = "../bench" }
