--- a/accounts-on-demand/Cargo.toml
+++ b/accounts-on-demand/Cargo.toml
@@ -33,6 +33,7 @@ anyhow = { workspace = true }
 log = { workspace = true }
 dashmap = { workspace = true }
 quinn = { workspace = true }
+tracing = { workspace = true }
 chrono = { workspace = true }
 rustls = { workspace = true }
 async-trait = { workspace = true }
