--- a/.github/workflows/fly-deploy-tantal-lite-rpc.yml
+++ b/.github/workflows/fly-deploy-tantal-lite-rpc.yml
@@ -18,7 +18,4 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
       
       - name: Deploy lite-rpc
-        run: flyctl deploy -c cd/lite-rpc.toml --remote-only
-
-#      - name: Deploy quic-forward-proxy
-#        run: flyctl deploy -c cd/quic-forward-proxy.toml --remote-only
+        run: flyctl deploy -c cd/lite-rpc-mainnet.toml --remote-only
