--- a/.github/workflows/fly-deploy-tantal-lite-rpc.yml
+++ b/.github/workflows/fly-deploy-tantal-lite-rpc.yml
@@ -5,7 +5,7 @@ on:
       branches: [production]
 
 env:
-  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN_LITERPC_DEPLOY }}
 
 jobs:
   deploy:
