--- a/.github/workflows/fly-deploy-tantal-lite-rpc.yml
+++ b/.github/workflows/fly-deploy-tantal-lite-rpc.yml
@@ -2,7 +2,9 @@ name: Deploy to Fly Production
 
 on:
   push:
-      branches: [production]
+    tags:
+      # e.g. production/literpc-202502182109
+      - "production/literpc-*"
 
 env:
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN_LITERPC_DEPLOY }}
