update everything to 2.2.2

--- a/quic-forward-proxy/Cargo.toml
+++ b/quic-forward-proxy/Cargo.toml
@@ -3,7 +3,7 @@ name = "solana-lite-rpc-quic-forward-proxy"
 version = "0.1.0"
 edition = "2021"
 description = "A staked proxy for transaction forwarding to TPU nodes"
-rust-version = "1.73.0"
+rust-version = "1.84.1"
 #default-run = "lite-rpc"
 repository = "https://github.com/blockworks-foundation/lite-rpc"
 license = "AGPL"
@@ -11,11 +11,11 @@ publish = false
 
 [dependencies]
 #solana-lite-rpc-core = { workspace = true }
-solana-lite-rpc-util = { workspace = true }
-solana-sdk = { workspace = true }
-solana-streamer = { workspace = true }
-solana-transaction-status = { workspace = true }
-solana-net-utils = { workspace = true }
+#solana-lite-rpc-util = { workspace = true }
+solana-sdk = "~2.2.2"
+solana-streamer = "~2.2.7"
+#solana-transaction-status = { workspace = true }
+solana-net-utils = "~2.2.2"
 rustls = { version = "0.23.22", features = ["ring"]}
 serde = { workspace = true }
 serde_json = { workspace = true }
