--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,24 +41,25 @@ solana-lite-rpc-accounts = { path = "accounts", version = "0.3.0"}
 solana-lite-rpc-accounts-on-demand = { path = "accounts-on-demand", version = "0.3.0"}
 bench = { path = "bench", version="0.3.0" }
 
-solana-sdk = "~2.0.16"
-solana-rpc-client = "~2.0.16"
-solana-rpc-client-api = "~2.0.16"
-solana-transaction-status = "~2.0.16"
-solana-version = "~2.0.16"
-solana-client = "~2.0.16"
-solana-net-utils = "~2.0.16"
-solana-pubsub-client = "~2.0.16"
-solana-streamer = "~2.0.16"
-solana-account-decoder = "~2.0.16"
-solana-ledger = "~2.0.16"
-solana-program = "~2.0.16"
-solana-accounts-db = "~2.0.16"
-solana-address-lookup-table-program = "~2.0.16"
+solana-sdk = "~2.2.2"
+solana-rpc-client = "~2.2.2"
+solana-rpc-client-api = "~2.2.2"
+solana-transaction-status = "~2.2.2"
+solana-version = "~2.2.2"
+solana-client = "~2.2.2"
+solana-net-utils = "~2.2.2"
+solana-pubsub-client = "~2.2.2"
+solana-streamer = "~2.2.2"
+solana-account-decoder = "~2.2.2"
+solana-ledger = "~2.2.2"
+solana-program = "~2.2.2"
+solana-accounts-db = "~2.2.2"
+solana-address-lookup-table-program = "~2.2.2"
 
-yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v3.0.0+solana.2.0.16" }
-geyser-grpc-connector = { git = "https://github.com/blockworks-foundation/geyser-grpc-connector.git", tag = "v0.12.1+yellowstone.3.0.0+solana.2.0" }
-
+yellowstone-grpc-proto = { git = "https://github.com/rpcpool/yellowstone-grpc.git", tag = "v6.0.0+solana.2.2.12" }
+# TODO
+#geyser-grpc-connector = { git = "https://github.com/blockworks-foundation/geyser-grpc-connector.git", tag = "v0.12.1+yellowstone.3.0.0+solana.2.0" }
+geyser-grpc-connector = { path = "../geyser-grpc-connector" }
 
 itertools = "0.10.5"
 rangetools = "0.1.4"
@@ -95,7 +96,7 @@ quinn-proto = "0.10.5"
 rustls = { version = "0.21.7", default-features = false, features = ["quic"] }
 tonic = "0.12"
 tonic-health = "0.12"
-rcgen = "0.13"
+rcgen = "0.9.3"
 
 [patch.crates-io.curve25519-dalek]
 git = "https://github.com/anza-xyz/curve25519-dalek.git"
