update quinn version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,10 +90,10 @@ lazy_static = "1.4.0"
 dotenv = "0.15.0"
 async-channel = "1.8.0"
 merge-streams = "0.1.2"
-jemallocator = "0.5"
-quinn = "0.10.2"
-quinn-proto = "0.10.5"
-rustls = { version = "0.21.7", default-features = false, features = ["quic"] }
+jemallocator = "0.5.4"
+quinn = "0.11.8"
+quinn-proto = "0.11.8"
+rustls = { version = "0.23.22", default-features = false, features = [] }
 tonic = "0.12"
 tonic-health = "0.12"
 rcgen = "0.9.3"
