--- a/services/Cargo.toml
+++ b/services/Cargo.toml
@@ -9,6 +9,7 @@ license = "AGPL"
 
 [dependencies]
 solana-sdk = { workspace = true }
+solana-tls-utils = { workspace = true }
 solana-rpc-client-api = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-version = { workspace = true }
