--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ solana-lite-rpc-accounts-on-demand = { path = "accounts-on-demand", version = "0
 bench = { path = "bench", version="0.3.0" }
 
 solana-sdk = "~2.2.2"
+solana-tls-utils = "~2.2.2"
 solana-rpc-client = "~2.2.2"
 solana-rpc-client-api = "~2.2.2"
 solana-transaction-status = "~2.2.2"
