--- a/quic-forward-proxy-integration-test/Cargo.toml
+++ b/quic-forward-proxy-integration-test/Cargo.toml
@@ -19,7 +19,7 @@ solana-streamer = { workspace = true }
 solana-tls-utils = { workspace = true }
 solana-transaction-status = { workspace = true }
 solana-net-utils = { workspace = true }
-rustls = { workspace = true }
+rustls = { workspace = true, features = ["ring"]}
 serde = { workspace = true }
 serde_json = { workspace = true }
 bincode = { workspace = true }
