--- a/address-lookup-tables/Cargo.toml
+++ b/address-lookup-tables/Cargo.toml
@@ -34,7 +34,7 @@ log = { workspace = true }
 dashmap = { workspace = true }
 quinn = { workspace = true }
 chrono = { workspace = true }
-rustls = { workspace = true }
+rustls = { workspace = true, features = ["ring"]}
 async-trait = { workspace = true }
 itertools = { workspace = true }
 prometheus = { workspace = true }
