--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,9 +90,9 @@ dotenv = "0.15.0"
 async-channel = "1.8.0"
 merge-streams = "0.1.2"
 jemallocator = "0.5.4"
-quinn = "0.11.8"
-quinn-proto = "0.11.12"
-rustls = { version = "0.23.27", default-features = false, features = ["ring"] }
+quinn = "0.11.6"
+quinn-proto = "0.11.9"
+rustls = { version = "0.23.22", features = ["std"], default-features = false }
 tonic = "0.12"
 tonic-health = "0.12"
 rcgen = "0.13.2"
