--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -30,7 +30,7 @@ tracing = { workspace = true }
 anyhow = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-tokio = { version = "1.43.0", features = ["full", "fs"]}
+tokio = { version = "1.45.0", features = ["full", "fs"]}
 tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
 rand = "0.8.5"
 rand_chacha = "0.3.1"
@@ -40,7 +40,7 @@ bincode = { workspace = true }
 itertools = "0.10.5"
 spl-memo = "4.0.0"
 url = "*"
-reqwest = "0.11.26"
+reqwest = { version = "0.12.15", features = ["json"] }
 lazy_static = "1.4.0"
 
 [dev-dependencies]
