--- a/lite-rpc/Cargo.toml
+++ b/lite-rpc/Cargo.toml
@@ -41,6 +41,10 @@ dotenv = { workspace = true }
 async-channel = { workspace = true }
 quinn = { workspace = true }
 async-trait = { workspace = true }
+tower = "0.4"
+tower-http = { version = "0.5", features = ["cors"] }
+http = "1.3.1"
+
 tokio = { version = "1.45.0", features = ["full", "fs"]}
 tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
 chrono = { workspace = true }
@@ -56,6 +60,7 @@ solana-lite-rpc-prioritization-fees = { workspace = true }
 solana-lite-rpc-address-lookup-tables = { workspace = true }
 solana-lite-rpc-accounts = { workspace = true }
 solana-lite-rpc-accounts-on-demand = { workspace = true }
+hyper = "0.14.32"
 
 [dev-dependencies]
 bench = { path = "../bench" }
