--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,8 +93,9 @@ jemallocator = "0.5.4"
 quinn = "0.11.8"
 quinn-proto = "0.11.12"
 rustls = { version = "0.23.22", features = ["ring"], default-features = false }
-tonic = "0.13.1"
-tonic-health = "0.13.1"
+# need to downgrad from 0.13 to 0.12 to be compatible Solana 2.2
+tonic = { version = "0.12.3",  features = ["gzip", "zstd", "tls-native-roots"] }
+tonic-health = "0.12.3"
 rcgen = "0.13.2"
 
 [patch.crates-io.curve25519-dalek]
