--- a/lite-rpc/Cargo.toml
+++ b/lite-rpc/Cargo.toml
@@ -41,6 +41,7 @@ dotenv = { workspace = true }
 async-channel = { workspace = true }
 quinn = { workspace = true }
 async-trait = { workspace = true }
+tonic = { workspace = true }
 tower = "0.4"
 tower-http = { version = "0.5", features = ["cors"] }
 http = "1.3.1"
